# vortisim

./: .clang-tidy  CMakeLists.txt  README.md
cmake/: ClangTidy.cmake  clang.toolchain.cmake  lto.helper.cmake  tidy.helper.cmake
dummy_tidy/: .clang-tidy
include/: displaywidget.h
res/: shaders.qrc
res/shaders/: arrows.f.glsl  arrows.v.glsl  default.f.glsl  default.v.glsl
src/: displaywidget.cpp  displaywidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  overloaded.hh
